# # Process this file with automake to produce Makefile.in.

AUTOMAKE_OPTIONS = 1.3 foreign

noinst_LTLIBRARIES = libmp3.la

libmp3_la_SOURCES = \
	amiga_mpega.c \
	bitstream.c \
	bitstream.h \
	brhist.c \
	brhist.h \
	confdefs.h \
	encoder.c \
	encoder.h \
	fft.c \
	fft.h \
	get_audio.c \
	get_audio.h \
	gpkplotting.h \
	gtkanal.h \
	id3tag.c \
	id3tag.h \
	ieeefloat.h \
	l3side.h \
	lame.c \
	lame.h \
	lametime.c \
	lametime.h \
	machine.h \
	newmdct.c \
	newmdct.h \
	parse.c \
	portableio.c \
	portableio.h \
	psymodel.c \
	psymodel.h \
	quantize.c \
	quantize.h \
	quantize_pvt.c \
	quantize_pvt.h \
	reservoir.c \
	reservoir.h \
	rtp.c \
	tables.c \
	tables.h \
	takehiro.c \
	timestatus.c \
	timestatus.h \
	util.c \
	util.h \
	vbrquantize.c \
	VbrTag.c \
	VbrTag.h \
	version.c \
	version.h \
	vorbis_interface.c

EXTRA_DIST = \
	LICENSE \
	COPYING \
	README \
	API \
	USAGE \
	STYLEGUIDE
